--- a/assets/scss/components/_blocks.scss
+++ b/assets/scss/components/_blocks.scss
@@ -89,7 +89,7 @@
             .carousel-control-next-icon {
                 width: 20px;
                 height: 20px;
-                padding: 5px;
+                padding: 1rem 0.5rem;
                 background-color: rgba(0, 0, 0, 0.5) !important;
                 border-radius: var(--trinity-border-radius) !important;
             }
